@@ -17,6 +17,9 @@ o  When the PPL has been configured with
    procedure checks that the FPU can indeed be controlled and fails if
    that is not the case.
 
+o  New configure option --with-gmp-prefix supersedes the (now removed)
+   options --with-libgmp-prefix and --with-libgmpxx-prefix.
+
 o  The Java interface has to be explicitly initialized before use by
    calling static method Parma_Polyhedra_Library.initialize_library().
    Initialization makes more explicit the exact point where PPL
